fixed popup images not showing completely

--- a/css/style.scss
+++ b/css/style.scss
@@ -150,5 +150,5 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 80dvw;
-  object-fit: cover;
+  object-fit:contain;
 }
